--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <button onclick="calculateFinalGrade()">Calculate Final Grade</button>
 <button onclick="addRows()">Add 3 Rows</button>
-<button onclick="clearFields()">Clear Fields</button>
+<button onclick="clearFields()">Reset Fields</button>
 
 <div id="result"></div>
 <div id="remainingWeight">Remaining Weight: 100%</div>
