--- a/main/index.html
+++ b/main/index.html
@@ -24,28 +24,28 @@
         
         <tr>
             <td><input type="text" class="assignment-name"></td>
-            <td><input type="number" class="assignment-grade" step="0.01" min="0" max="100"></td>
-            <td><input type="number" class="assignment-weight" step="0.01" min="0" max="100" oninput="updateRemainingWeight()"></td>
+            <td><input type="number" class="assignment-grade"  ></td>
+            <td><input type="number" class="assignment-weight"  oninput="updateRemainingWeight()"></td>
         </tr>
         <tr>
             <td><input type="text" class="assignment-name"></td>
-            <td><input type="number" class="assignment-grade" step="0.01" min="0" max="100"></td>
-            <td><input type="number" class="assignment-weight" step="0.01" min="0" max="100" oninput="updateRemainingWeight()"></td>
+            <td><input type="number" class="assignment-grade"  ></td>
+            <td><input type="number" class="assignment-weight"  oninput="updateRemainingWeight()"></td>
         </tr>
         <tr>
             <td><input type="text" class="assignment-name"></td>
-            <td><input type="number" class="assignment-grade" step="0.01" min="0" max="100"></td>
-            <td><input type="number" class="assignment-weight" step="0.01" min="0" max="100" oninput="updateRemainingWeight()"></td>
+            <td><input type="number" class="assignment-grade" ></td>
+            <td><input type="number" class="assignment-weight"   oninput="updateRemainingWeight()"></td>
         </tr>
         <tr>
             <td><input type="text" class="assignment-name"></td>
-            <td><input type="number" class="assignment-grade" step="0.01" min="0" max="100"></td>
-            <td><input type="number" class="assignment-weight" step="0.01" min="0" max="100" oninput="updateRemainingWeight()"></td>
+            <td><input type="number" class="assignment-grade"  "></td>
+            <td><input type="number" class="assignment-weight"  oninput="updateRemainingWeight()"></td>
         </tr>
         <tr>
             <td><input type="text" class="assignment-name"></td>
-            <td><input type="number" class="assignment-grade" step="0.01" min="0" max="100"></td>
-            <td><input type="number" class="assignment-weight" step="0.01" min="0" max="100" oninput="updateRemainingWeight()"></td>
+            <td><input type="number" class="assignment-grade" ></td>
+            <td><input type="number" class="assignment-weight"  oninput="updateRemainingWeight()"></td>
         </tr>
     </tbody>
 </table>
