weight input fix

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <td><input type="text" class="assignment-name"></td>
-                <td><input type="number" class="assignment-grade" "></td>
+                <td><input type="number" class="assignment-grade"></td>
             <td><input type=" number" class="assignment-weight" oninput="updateRemainingWeight()"></td>
             </tr>
             <tr>
